<resources>
    <string name="app_name">图界</string>
    <string name="homepage_tab_category_display">分类</string>
    <string name="homepage_tab_hot">热门</string>
    <string name="homepage_hot_recommend">推荐</string>
    <string name="setting_item_text">设置</string>
    <string name="search">搜索</string>
    <string name="search_hint">请输入搜索内容…</string>
    <string name="clean_app_cache">清空缓存</string>
    <string name="clean_cache_complete">清理缓存成功</string>
    <string name="photobound_main_category">美女</string>
    <string name="back_press_exit_tips">再按一次退出程序！</string>
    <string name="clear_history_text">点击清空搜索历史</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="hot_category">热门类目</string>
    <string name="cancel_favorite_failed">取消收藏失败！</string>
    <string name="favorite_success">收藏成功！</string>
    <string name="favorite_failed">收藏失败！</string>
    <string name="favorite_canceled">已取消收藏！</string>
    <string name="clean_app_favorites">清空收藏</string>
    <string name="clear_favorites_confirm">确定要清空收藏吗？将会删除本地图片！</string>
    <string name="clean_favorites_complete">清除收藏成功！</string>
    <string name="favorite_desc_format">%1$s&#160;&#160;(%2$d个)</string>
    <string name="no_more_pic">无更多加载！</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_favorite_with_count">我的收藏 （%1$d个）</string>
    <string name="cancel_favorite">取消收藏</string>
    <string name="view_favorite">查看收藏</string>
    <string name="cancel_favorite_confirm">确定要取消收藏吗？将删除本地图片！</string>
    <string name="iamge_viewer_title">图片查看器</string>
    <string name="cancel_favorite_success">已取消收藏</string>
    <string name="add_to_favorite_tag">收藏该标签</string>
    <string name="cancel_favorite_tag">取消收藏该标签</string>
    <string name="cancel_favorite_tag_failed">取消收藏失败</string>
    <string name="add_to_favorite_tag_failed">收藏标签失败</string>
    <string name="view_tag">查看标签</string>
    <string name="favorite_count_format">%1$d个</string>
    <string name="favorite_tag_count_format">%1$d个</string>
    <string name="my_favorite_tags">我收藏的标签</string>
    <string name="view_favorite_path">查看收藏路径</string>
    <string name="favorite_path_wording">收藏的图片位于：%1$s</string>
    <string name="download_succeeded">下载成功</string>
    <string name="no_favorite_now">暂无收藏</string>
    <string name="remove_tag_from_list_text">从搜索列表移除</string>
    <string name="about_app_desc">美女帅哥，更多图片壁纸都在这里！</string>
    <string name="about_app">关于 App</string>
    <string name="share_failed">分享失败！</string>
    <string name="share_succeeded">分享成功！</string>
    <string name="share_title">【图界】美女帅哥，更多图片壁纸都在这里！</string>
    <string name="share_to_title">分享到…</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_wx_friend">分享到微信好友</string>
    <string name="share_to_wx_friend_group">分享到微信朋友圈</string>
    <string name="set_to_wallpaper">设为壁纸</string>
    <string name="set_to_wallpaper_success">壁纸设置成功！</string>
    <string name="download_wallpaper_failed">下载壁纸失败！</string>
    <string name="wallpaper_downloading">高清壁纸下载中…</string>
    <string name="logout_confirm">确定要退出登录吗？</string>
    <string name="my_favorite_item">收藏</string>
    <string name="download_when_favorite_pic">收藏图片时下载到本地</string>
    <string name="synchronizing_favorites">正在同步收藏…</string>
    <string name="not_download_to_local">尚未下载到本地</string>
    <string name="download_to_local">下载到本地</string>
    <string name="user_fav_tags">收藏标签</string>
    <string name="have_no_faved_tags">无收藏的标签</string>
    <string name="add_comment_failed">添加评论失败！</string>
    <string name="remove_comment_failed">删除评论失败！</string>
    <string name="add_praise_failed">点赞失败！</string>
    <string name="remove_praise_failed">取消点赞失败！</string>
    <string name="add_comment">提交</string>
    <string name="comment_cannot_be_empty">评论内容不能为空！</string>
    <string name="no_more_comments">没有更多评论了！</string>
    <string name="not_login_cannot_praise">未登录，不能点赞。</string>
    <string name="not_login_cannot_comment">未登录不能发表评论。</string>
    <string name="loading_comments">评论加载中…</string>
    <string name="have_no_comments">暂无评论</string>
    <string name="remove_comment">删除评论</string>
    <string name="select_operate">请选择操作…</string>
    <string name="add_comment_succeeded">评论成功。</string>
    <string name="remove_comment_succeeded">删除评论成功。</string>
    <string name="set_to_user_info_succeeded">已设置到个人资料页。</string>
    <string name="last_update_label">最后更新于：</string>
    <string name="pull_up_to_refresh">上拉载入…</string>
    <string name="pull_up_refresh_release">放开以载入</string>
    <string name="hot_recommend">热门推荐</string>
    <string name="deveopment">开发者选项</string>
    <string name="open_development_tips">还剩%1$d次可进入开发者选项！</string>
    <string name="development_opened">已开启开发者选项！</string>
    <string name="download_failed">下载失败</string>
    <string name="about_item_text">关于</string>
    <string name="network_invalid_tips">连接超时，请检查你的网络设置。</string>
    <string name="arnozhang_github">https://github.com/arnozhang</string>
    <string name="arnozhang">Arno Zhang丶</string>
</resources>
